# Matchaaa

./: README.md  index.html  package-lock.json  package.json
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/controllers/: auth_controller.cpp  auth_controller.hpp  profile_controller.cpp  profile_controller.hpp
backend/src/db/: connection.cpp  connection.hpp
backend/src/routes/: auth.cpp  auth.hpp  profile.cpp  profile.hpp
backend/src/services/: auth_service.cpp  auth_service.hpp  profile_service.cpp  profile_service.hpp
backend/src/utils/: hash.cpp  hash.hpp  jwt.cpp  jwt.hpp
src/: App.tsx
src/components/auth/: LoginForm.tsx  RegisterForm.tsx
src/components/profile/: ProfileForm.tsx
src/components/ui/: Button.tsx  Input.tsx
src/context/: AuthContext.tsx
src/pages/: ForgotPasswordPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  VerifyEmailPage.tsx
src/types/: index.ts
supabase/migrations/: 20250521213421_black_pine.sql
